checker/tests/nullness-extra/issue559/Expected.txt
warning: StubParser: No supported annotations found! This likely means your stub file doesn't import them correctly.
warning: StubParser: in file myjdk.astub at line 5 ignored existing annotations on type: T extends @Initialized @Nullable Object
Test.java:10: error: [argument.type.incompatible] incompatible types in argument.
        o.orElse(null);
                 ^
  found   : null
  required: @Initialized @NonNull String
1 error
2 warnings
